--- a/output/index.html
+++ b/output/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="http://s6.qhimg.com/static/59489ca0e3d5df8b/index.css" media="screen">
 
-    <title>mv.docs by openjavascript</title>
+    <title>mv project</title>
 </head>
 
 <body>
     <header>
     <div class="inner">
-        <h1>mv.docs</h1>
-        <h2>mv mv.docs</h2>
+        <h1>mv project</h1>
+        <h2>webpack developer platform for web font-end</h2>
         <a href="https://github.com/openjavascript/mv.docs" class="button"><small>View project on</small> GitHub</a>
     </div>
     </header>
