--- a/src-webpack/index.html
+++ b/src-webpack/index.html
@@ -49,8 +49,36 @@
                 </dd>
             </dl>
 
+            <dl class="cat">
+                <dt><label>webpack 应用组件</label></dt>
+                <dd>
+                    <dl class="clearfix cat_item">
+                        <dd>
+                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
+                            <a href="">item name</a>
+                        </dd>
+                        <dd>
+                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
+                            <a href="">item name</a>
+                        </dd>
+                        <dd>
+                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
+                            <a href="">item name</a>
+                        </dd>
+                        <dd>
+                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
+                            <a href="">item name</a>
+                        </dd>
+                        <dd>
+                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
+                            <a href="">item name</a>
+                        </dd>
+                    </dl>
+                </dd>
+            </dl>
+
             <dl class="clearfix cat">
-                <dt><label>项目配置</label</dt>
+                <dt><label>webpack 项目配置</label</dt>
                 <dd>
                     <dl class="clearfix cat_item">
                         <dd>
@@ -105,8 +133,9 @@
                 </dd>
             </dl>
 
+
             <dl class="cat">
-                <dt><label>webpack 应用组件</label></dt>
+                <dt><label>webpack 小工具</label></dt>
                 <dd>
                     <dl class="clearfix cat_item">
                         <dd>
