--- a/src-webpack/index.html
+++ b/src-webpack/index.html
@@ -27,23 +27,23 @@
                     <dl class="clearfix cat_item">
                         <dd>
                             <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
+                            <a href="">默认</a>
                         </dd>
                         <dd>
                             <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
+                            <a href="">动态模板</a>
                         </dd>
                         <dd>
                             <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
+                            <a href="">动态模板 + React</a>
                         </dd>
                         <dd>
                             <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
+                            <a href="">动态模板 + less</a>
                         </dd>
                         <dd>
                             <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
+                            <a href="">动态模板 + React + less</a>
                         </dd>
                     </dl>
                 </dd>
