--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
     <div class="inner">
-        <h1>mv project</h1>
+        <h1 class="sitename"><a href="index.html">mv project</a></h1>
         <h2>webpack developer platform for web font-end</h2>
         <a href="https://github.com/openjavascript/mv.docs" class="button"><small>View project on</small> GitHub</a>
     </div>
@@ -51,34 +51,6 @@
 
             <dl class="cat">
                 <dt><label>webpack 应用组件</label></dt>
-                <dd>
-                    <dl class="clearfix cat_item">
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                    </dl>
-                </dd>
-            </dl>
-
-            <dl class="clearfix cat">
-                <dt><label>webpack 项目配置</label</dt>
                 <dd>
                     <dl class="clearfix cat_item">
                         <dd>
