--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,16 @@
         <h2>webpack developer platform for web font-end</h2>
         <a href="https://github.com/openjavascript/mv.docs" class="button"><small>View project on</small> GitHub</a>
     </div>
-    </header>
+    <nav class="sitenav">
+        <a href="index.html">首页</a>
+        <a href="docs.html">文档</a>
+    </nav>
+</header>
+
 
     <div id="content-wrapper">
         <div class="inner clearfix">
+
             
             <dl class="clearfix cat">
                 <dt><label>项目方案</label></dt>
@@ -137,5 +143,10 @@
         </div>
     </div>
 
-<script type="text/javascript" src="static/js/vendors.js?40ed781e76ba6b9d9bfa"></script><script type="text/javascript" src="static/js/index.js?40ed781e76ba6b9d9bfa"></script></body>
+<script src="//s0.qhimg.com/!415dd799/jquery.js"></script>
+<script src="//s2.qhimg.com/!39ea481e/react-with-addons.min.js"></script>
+<script src="//s4.qhimg.com/!8c151852/react-dom.js"></script>
+
+
+<script type="text/javascript" src="static/js/vendors.js?d6401c7ba645a4d791d2"></script><script type="text/javascript" src="static/js/index.js?d6401c7ba645a4d791d2"></script></body>
 </html>
