--- a/src/index.html
+++ b/src/index.html
@@ -27,118 +27,34 @@
         <div class="inner clearfix">
 
             
-            <dl class="clearfix cat">
-                <dt><label>项目方案</label></dt>
-                <dd class="">
-                    <dl class="clearfix cat_item">
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">默认</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">动态模板</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">动态模板 + React</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">动态模板 + less</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">动态模板 + React + less</a>
-                        </dd>
-                    </dl>
-                </dd>
-            </dl>
+<!--            <dl class="clearfix cat">-->
+                <!--<dt><label>项目方案</label></dt>-->
+                <!--<dd class="">-->
+                    <!--<dl class="clearfix cat_item">-->
+                        <!--<dd>-->
+                            <!--<a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>-->
+                            <!--<a href="">默认</a>-->
+                        <!--</dd>-->
+                        <!--<dd>-->
+                            <!--<a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>-->
+                            <!--<a href="">动态模板</a>-->
+                        <!--</dd>-->
+                        <!--<dd>-->
+                            <!--<a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>-->
+                            <!--<a href="">动态模板 + React</a>-->
+                        <!--</dd>-->
+                        <!--<dd>-->
+                            <!--<a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>-->
+                            <!--<a href="">动态模板 + less</a>-->
+                        <!--</dd>-->
+                        <!--<dd>-->
+                            <!--<a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>-->
+                            <!--<a href="">动态模板 + React + less</a>-->
+                        <!--</dd>-->
+                    <!--</dl>-->
+                <!--</dd>-->
+            <!--</dl>-->
 
-            <dl class="cat">
-                <dt><label>webpack 应用组件</label></dt>
-                <dd>
-                    <dl class="clearfix cat_item">
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                    </dl>
-                </dd>
-            </dl>
-
-            <dl class="clearfix cat">
-                <dt><label>webpack 系统组件</label></dt>
-                <dd>
-                    <dl class="clearfix cat_item">
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                    </dl>
-                </dd>
-            </dl>
-
-
-            <dl class="cat">
-                <dt><label>webpack 小工具</label></dt>
-                <dd>
-                    <dl class="clearfix cat_item">
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                    </dl>
-                </dd>
-            </dl>
 
         </div>
     </div>
@@ -148,5 +64,5 @@
 <script src="//s4.qhimg.com/!8c151852/react-dom.js"></script>
 
 
-<script type="text/javascript" src="static/js/vendors.js?d6401c7ba645a4d791d2"></script><script type="text/javascript" src="static/js/index.js?d6401c7ba645a4d791d2"></script></body>
+<script type="text/javascript" src="static/js/vendors.js?497c98e47fb4343a44ae"></script><script type="text/javascript" src="static/js/index.js?497c98e47fb4343a44ae"></script></body>
 </html>
