--- a/src-webpack/index.html
+++ b/src-webpack/index.html
@@ -16,118 +16,34 @@
         <div class="inner clearfix">
 
             
-            <dl class="clearfix cat">
-                <dt><label>项目方案</label></dt>
-                <dd class="">
-                    <dl class="clearfix cat_item">
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">默认</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">动态模板</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">动态模板 + React</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">动态模板 + less</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">动态模板 + React + less</a>
-                        </dd>
-                    </dl>
-                </dd>
-            </dl>
+<!--            <dl class="clearfix cat">-->
+                <!--<dt><label>项目方案</label></dt>-->
+                <!--<dd class="">-->
+                    <!--<dl class="clearfix cat_item">-->
+                        <!--<dd>-->
+                            <!--<a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>-->
+                            <!--<a href="">默认</a>-->
+                        <!--</dd>-->
+                        <!--<dd>-->
+                            <!--<a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>-->
+                            <!--<a href="">动态模板</a>-->
+                        <!--</dd>-->
+                        <!--<dd>-->
+                            <!--<a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>-->
+                            <!--<a href="">动态模板 + React</a>-->
+                        <!--</dd>-->
+                        <!--<dd>-->
+                            <!--<a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>-->
+                            <!--<a href="">动态模板 + less</a>-->
+                        <!--</dd>-->
+                        <!--<dd>-->
+                            <!--<a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>-->
+                            <!--<a href="">动态模板 + React + less</a>-->
+                        <!--</dd>-->
+                    <!--</dl>-->
+                <!--</dd>-->
+            <!--</dl>-->
 
-            <dl class="cat">
-                <dt><label>webpack 应用组件</label></dt>
-                <dd>
-                    <dl class="clearfix cat_item">
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                    </dl>
-                </dd>
-            </dl>
-
-            <dl class="clearfix cat">
-                <dt><label>webpack 系统组件</label></dt>
-                <dd>
-                    <dl class="clearfix cat_item">
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                    </dl>
-                </dd>
-            </dl>
-
-
-            <dl class="cat">
-                <dt><label>webpack 小工具</label></dt>
-                <dd>
-                    <dl class="clearfix cat_item">
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                        <dd>
-                            <a href="#"><img src="./static/img/default_item.jpg" width="100%" /></a>
-                            <a href="">item name</a>
-                        </dd>
-                    </dl>
-                </dd>
-            </dl>
 
         </div>
     </div>
