--- a/src/index.html
+++ b/src/index.html
@@ -59,9 +59,9 @@
         </div>
     </div>
 
-<script src="//s0.qhimg.com/!415dd799/jquery.js"></script>
-<script src="//s2.qhimg.com/!39ea481e/react-with-addons.min.js"></script>
-<script src="//s4.qhimg.com/!8c151852/react-dom.js"></script>
+<script src="http://s0.qhimg.com/!415dd799/jquery.js"></script>
+<script src="http://s2.qhimg.com/!39ea481e/react-with-addons.min.js"></script>
+<script src="http://s4.qhimg.com/!8c151852/react-dom.js"></script>
 
 
 <script type="text/javascript" src="static/js/vendors.js?a583a19caa588fadbe61"></script><script type="text/javascript" src="static/js/index.js?a583a19caa588fadbe61"></script></body>
